--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,10 @@
       <div onclick="location.href='index.html'" id="logo-text">Meal Makers</div>
       <div id="dropdown">
         <div>
-          <button class="menu-btn" id="sign-in">Sign In</button>
+          <button class="menu-btn" id="sign-in" hidden="true">Sign In</button>
           <img id="pfp" />
         </div>
-        <div id="dropdown-content">
+        <div id="dropdown-content" hidden="true">
           <button class="drop-btn" id="sign-out">Sign Out</button>
         </div>
       </div>
